--- a/.editorconfig
+++ b/.editorconfig
@@ -63,7 +63,7 @@ ij_java_blank_lines_before_package = 0
 ij_java_block_brace_style = end_of_line
 ij_java_block_comment_add_space = false
 ij_java_block_comment_at_first_column = true
-ij_java_builder_methods =
+ij_java_builder_methods = none
 ij_java_call_parameters_new_line_after_left_paren = true
 ij_java_call_parameters_right_paren_on_new_line = true
 ij_java_call_parameters_wrap = on_every_item
