--- a/.editorconfig
+++ b/.editorconfig
@@ -101,8 +101,8 @@ ij_java_enum_constants_wrap = off
 ij_java_extends_keyword_wrap = off
 ij_java_extends_list_wrap = off
 ij_java_field_annotation_wrap = split_into_lines
-ij_java_field_name_prefix =
-ij_java_field_name_suffix =
+ij_java_field_name_prefix = none
+ij_java_field_name_suffix = none
 ij_java_finally_on_new_line = false
 ij_java_for_brace_force = never
 ij_java_for_statement_new_line_after_left_paren = false
@@ -152,8 +152,8 @@ ij_java_new_line_after_lparen_in_deconstruction_pattern = true
 ij_java_new_line_after_lparen_in_record_header = false
 ij_java_packages_to_use_import_on_demand = java.awt.*, javax.swing.*
 ij_java_parameter_annotation_wrap = off
-ij_java_parameter_name_prefix =
-ij_java_parameter_name_suffix =
+ij_java_parameter_name_prefix = none
+ij_java_parameter_name_suffix = none
 ij_java_parentheses_expression_new_line_after_left_paren = false
 ij_java_parentheses_expression_right_paren_on_new_line = false
 ij_java_place_assignment_sign_on_next_line = false
@@ -249,13 +249,13 @@ ij_java_spaces_within_synchronized_parentheses = false
 ij_java_spaces_within_try_parentheses = false
 ij_java_spaces_within_while_parentheses = false
 ij_java_special_else_if_treatment = true
-ij_java_static_field_name_prefix =
-ij_java_static_field_name_suffix =
-ij_java_subclass_name_prefix =
+ij_java_static_field_name_prefix = none
+ij_java_static_field_name_suffix = none
+ij_java_subclass_name_prefix = none
 ij_java_subclass_name_suffix = Impl
 ij_java_ternary_operation_signs_on_next_line = true
 ij_java_ternary_operation_wrap = normal
-ij_java_test_name_prefix =
+ij_java_test_name_prefix = none
 ij_java_test_name_suffix = Test
 ij_java_throws_keyword_wrap = off
 ij_java_throws_list_wrap = off
