remove test method prefix in editor config

--- a/.editorconfig
+++ b/.editorconfig
@@ -255,7 +255,7 @@ ij_java_subclass_name_prefix = none
 ij_java_subclass_name_suffix = Impl
 ij_java_ternary_operation_signs_on_next_line = true
 ij_java_ternary_operation_wrap = normal
-ij_java_test_name_prefix = none
+ij_java_test_name_prefix =
 ij_java_test_name_suffix = Test
 ij_java_throws_keyword_wrap = off
 ij_java_throws_list_wrap = off
