--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,9 +29,15 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+    - name: Build with Gradle Wrapper and run tests with coverage
+      run: ./gradlew build jacocoTestReport
 
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        files: build/reports/jacoco/test/jacocoTestReport.xml
+        fail_ci_if_error: true
+        
   dependency-submission:
 
     runs-on: ubuntu-latest
