--- a/lombok.config
+++ b/lombok.config
@@ -1,3 +1,5 @@
 # Suppress warnings for generated code; otherwise Spotbugs complains about lazy getters
 # See: https://github.com/spotbugs/spotbugs/issues/3084
 lombok.extern.findbugs.addSuppressFBWarnings = true
+# Anotate generated methods to make it easier to exclude them from test coverage
+lombok.addLombokGeneratedAnnotation = true
