tell lombok to use Guava's checkNonNull

--- a/lombok.config
+++ b/lombok.config
@@ -1,5 +1,7 @@
 # Suppress warnings for generated code; otherwise Spotbugs complains about lazy getters
 # See: https://github.com/spotbugs/spotbugs/issues/3084
 lombok.extern.findbugs.addSuppressFBWarnings = true
-# Anotate generated methods to make it easier to exclude them from test coverage
+# Anotate generated methods to make it easier to exclude them from test coverage:
 lombok.addLombokGeneratedAnnotation = true
+# Use Guava's checkNonNull:
+lombok.nonNull.exceptionType = Guava
