--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,9 @@
 [versions]
 commons-math3 = "3.6.1"
 guava = "33.1.0-jre"
+mockito = "5.14.0"
 
 [libraries]
 commons-math3 = { module = "org.apache.commons:commons-math3", version.ref = "commons-math3" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
+mockito = { module = "org.mockito:mockito-core", version.ref = "mockito" }
