--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ geotools = "32.2"
 guava = "33.4.0-jre"
 indriya = "2.2.2"
 jcommander = "2.0"
+joda-money = "2.0.2"
 jqwik = "1.9.2"
 jts = "1.20.0"
 junit = "5.12.0"
@@ -44,6 +45,7 @@ gt-shapefile = { module = "org.geotools:gt-shapefile", version.ref = "geotools" 
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 indriya = { module = "tech.units:indriya", version.ref = "indriya" }
 jcommander = { module = "org.jcommander:jcommander", version.ref = "jcommander" }
+joda-money = { module = "org.joda:joda-money", version.ref = "joda-money" }
 jqwik = { module = "net.jqwik:jqwik", version.ref = "jqwik" }
 jts-core = { module = "org.locationtech.jts:jts-core", version.ref = "jts" }
 junit = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
