--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,8 +22,8 @@ snakeyaml = "2.2"
 streamex = "0.8.3"
 tablesaw = "0.44.0"
 spotbugs = "6.0.26"
-grpc = "1.68.1"
-protobuf = "4.28.3"
+grpc = "1.71.0"
+protobuf = "4.30.2"
 annotation-api = "1.3.2"
 
 [libraries]
@@ -53,6 +53,7 @@ junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher
 lombok = { module = "org.projectlombok:lombok", version.ref = "lombok" }
 mockito = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 protobuf-java = { module = "com.google.protobuf:protobuf-java", version.ref = "protobuf" }
+protobuf-java-util = { module = "com.google.protobuf:protobuf-java-util", version.ref = "protobuf" }
 protoc = { module = "com.google.protobuf:protoc", version.ref = "protobuf" }
 protocGenGrpcJava = { module = "io.grpc:protoc-gen-grpc-java", version.ref = "grpc" }
 si-units = { module = "si.uom:si-units", version.ref = "si-units" }
@@ -70,4 +71,4 @@ grpc = ["grpc-netty-shaded", "grpc-protobuf", "grpc-stub", "protobuf-java", "ann
 [plugins]
 spotbugs = { id = "com.github.spotbugs", version.ref = "spotbugs" }
 shadow = { id = "com.gradleup.shadow", version = "8.3.5" }
-protobuf = { id = "com.google.protobuf", version = "0.9.4" }
+protobuf = { id = "com.google.protobuf", version = "0.9.5" }
